Advanced_Feature/3.19_UDPRoute_Weight/gw-udp-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: udp-gw
  namespace: web
spec:
  gatewayClassName: f5-bnk-gateway-class

  addresses:
    - type: IPAddress
      value: 40.30.20.20

  listeners:
    - name: bnk-listener
      protocol: UDP
      port: 9053

      allowedRoutes:
        namespaces:
          from: All

        kinds:
          - kind: UDPRoute
